--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@
   text-decoration: solid red;
 }
 .navigation{
-  position: absolute;
+  position: fixed;
   top: 16.5%;
+  left: 0;
+  background-color:rgba(245, 215, 132, 0.973);
+  z-index: 10000;
+  padding-right: 100%;
+  padding-left: 20px;
 }
 nav ul{
   margin: 0px 100px ;
@@ -15,6 +20,7 @@ nav ul{
 nav li{
   width: 20%;
   font-size: 25px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: inline-block;
   text-decoration: none;
   padding: 15px 35px;
@@ -23,6 +29,7 @@ nav li{
 nav li:hover{
   background-color: #d4d4d4ec;
   font-size: 30px;
+  border-bottom: 6px solid white;
 }
 a{
   text-decoration: inherit;
@@ -109,4 +116,226 @@ div#bodyy{
 }
 .flex-container{
   display: flex;
+}
+@media screen and (max-width: 1100px){
+  #thought{
+    font-size: 1.6em;
+  }
+  #Intro{
+    font-size: 1.1em;
+  }
+  .box a img{
+    height: 120px;
+    width: 120px;
+  }
+  .box a img:hover{
+    height: 160px;
+    width: 160px;
+  }
+  nav li{
+    width: 20%;
+    font-size: 22px;
+    padding: 15px 20px;
+  }
+  .Meee {
+    font-size: 1.2em;
+}
+  .Meee span{
+    font-size: 0.6em;
+  }
+  .navigation{
+    position: fixed;
+    top: 14.5%;
+    left: 0;
+  }
+  .Glow img{
+    position:absolute;
+    left:0;
+    top:23.5%;
+  }
+  div#bodyy{
+    position: absolute;
+    top:660px;
+    margin-left: 40px;
+  }
+  
+}
+
+@media screen and (max-width: 915px){
+  #thought{
+    font-size: 1.4em;
+  }
+  #Intro{
+    font-size: 1.1em;
+  }
+  .box a img{
+    height: 110px;
+    width: 110px;
+  }
+  .box a img:hover{
+    height: 140px;
+    width: 140px;
+  }
+  .navigation{
+    position: fixed;
+    top: 13.3%;
+    left: 0;
+  }
+  nav li{
+    width: 20%;
+    font-size: 18px;
+    padding: 8px 15px;
+  }
+  .Glow img{
+    height:50%;
+    position:absolute;
+    left:0;
+    top:20%;
+  }
+  .Meee {
+    font-size: 0.9em;
+    padding:10px 0;
+}
+  .Meee span{
+    font-size: 0.6em;
+  }
+  div#bodyy{
+    position: absolute;
+    top: 500px;
+    left:0;
+    margin-left: 20px;
+}
+@media screen and (max-width: 680px){
+  #thought{
+    font-size: 0.8em;
+  }
+  #Intro{
+    font-size: 0.9em;
+  }
+  .box a img{
+    height: 90px;
+    width: 90px;
+  }
+  .box a img:hover{
+    height: 110px;
+    width: 110px;
+  }
+  .navigation{
+    position:absolute;
+    top: 45%;
+    left: 0;
+    background-color:rgba(245, 215, 132, 0.973);
+    z-index: 10000;
+    padding-right: 100%;
+    padding-left: 10px;
+  }
+  nav ul{
+    margin: 0px 100px ;
+    white-space: nowrap;
+    max-width: 1200px;
+  }
+  nav li{
+    width: 200%;
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-decoration: none;
+    padding: 10px 5px;
+    text-align:start;
+  }
+  nav li:hover{
+    background-color: #d4d4d4ec;
+    font-size: 20px;
+    border-bottom: 6px solid white;
+  }
+  .Glow img{
+    height:35%;
+    position:absolute;
+    left:0;
+    top:12%;
+  }
+  .Meee {
+    font-size: 0.9em;
+    padding:10px 0;
+}
+  .Meee span{
+    font-size: 0.5em;
+  }
+  div#bodyy{
+    position: absolute;
+    top: 476px;
+    left:0;
+    margin-left: 5px;
+}
+@media screen and (max-width: 590px){
+  #thought{
+    font-size:xx-small;
+    font-family:Arial, Helvetica, sans-serif;
+  }
+  #Intro{
+    font-size: 0.9em;
+  }
+  .box a img{
+    height: 60px;
+    width: 60px;
+  }
+  .box a img:hover{
+    height: 80px;
+    width: 80px;
+  }
+  .navigation{
+    position:absolute;
+    top: 45%;
+    left: 0;
+    background-color:rgba(245, 215, 132, 0.973);
+    z-index: 10000;
+    padding-right: 100%;
+    padding-left: 10px;
+  }
+  nav ul{
+    margin: 0px 100px ;
+    white-space: nowrap;
+    max-width: 1200px;
+  }
+  nav li{
+    width: 200%;
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-decoration: none;
+    padding: 10px 5px;
+    text-align:start;
+  }
+  nav li:hover{
+    background-color: #d4d4d4ec;
+    font-size: 20px;
+    border-bottom: 6px solid white;
+  }
+  .Glow img{
+    height:35%;
+    width: 130%;
+    position:absolute;
+    left:0;
+    top:12%;
+  }
+  .Meee strong {
+    font-size: 0.9em;
+    padding:10px 0;
+    position: relative;
+    left:-25%;
+    text-align: start;
+    
+    
+}
+  .Meee span{
+    font-size: 0.5em;
+    position: absolute;
+    top: 100px;
+    left: 30%;
+  }
+  div#bodyy{
+    position: absolute;
+    top: 450px;
+    left:0;
+    margin-left: 5px;
 }
