--- a/gallery.css
+++ b/gallery.css
@@ -1,4 +1,7 @@
-
+main{
+    margin-left: 20px;
+    margin-right: 50px;
+}
 body{
     background-color: rgba(0, 0, 0, 0.247);
 }
@@ -19,7 +22,7 @@ body{
     border-radius: 10px;
     transition: transform 1s;
     transform-style: preserve-3d;
-    padding: 0 5%;
+    padding: 0 50px;
     
 }
 .imgs li img:hover{
